# HypexOperatingSystem

./: CMakeLists.txt  README.md  bx_enh_dbg.ini  iso.sh  kernel.elf  limine.conf  pci_ids.cpp  pci_ids_to_cpp.py  start.bat
src/: kernel.h  main.c  main.cpp
src/hal/: io.h
src/init/: start.asm
src/mm/: common.c  common.h  physical.c  physical.h
